feat: log system
